-- V12 — Module 4: Campaign Records
-- ─────────────────────────────────────────────────────────────────────────────
-- Stores every operator-submitted campaign data ingestion (UC-4.1 / FR4.26).
--
-- Columns are populated in three stages:
--   Stage 1 (insert)  : raw operator inputs (impressions … new_customers)
--   Stage 2 (update)  : derived KPIs after MetricsCalculationService.compute()
--   Stage 3 (update)  : PES result after FastAPI pes-compute/analyze responds
--                        (or after the FR4.26 rule-based fallback runs)
--
-- PostgreSQL 14+  ·  UUID generated by gen_random_uuid() (pgcrypto / uuid-ossp)
-- ─────────────────────────────────────────────────────────────────────────────

CREATE TABLE tbl_campaign_records (
    campaign_id     UUID             NOT NULL DEFAULT gen_random_uuid(),

    -- ── Raw operator inputs ───────────────────────────────────────────────
    impressions     BIGINT           NOT NULL DEFAULT 0,
    clicks          BIGINT           NOT NULL DEFAULT 0,
    ad_spend        DOUBLE PRECISION NOT NULL DEFAULT 0,
    revenue         DOUBLE PRECISION NOT NULL DEFAULT 0,
    conversions     BIGINT           NOT NULL DEFAULT 0,
    bookings        BIGINT           NOT NULL DEFAULT 0,
    new_customers   BIGINT           NOT NULL DEFAULT 0,

    -- ── Derived KPIs (nullable — populated after Spring Boot computes them) ──
    ctr             DOUBLE PRECISION,   -- Click-Through Rate  (%)
    cpc             DOUBLE PRECISION,   -- Cost per Click      (₱)
    conv_rate       DOUBLE PRECISION,   -- Conversion Rate     (%)
    roas            DOUBLE PRECISION,   -- Return on Ad Spend  (×)
    cac             DOUBLE PRECISION,   -- Customer Acq. Cost  (₱)

    -- ── PES result (nullable — populated after FastAPI or fallback) ────────
    pes_score       DOUBLE PRECISION,   -- 0.0 – 1.0
    pes_label       VARCHAR(50),        -- "Poor" | "Fair" | "Good" | "Excellent Performance"

    -- ── Analysis window metadata ──────────────────────────────────────────
    analysis_weeks  INTEGER,
    period_start    VARCHAR(20),
    period_end      VARCHAR(20),

    -- ── Audit ─────────────────────────────────────────────────────────────
    created_at      TIMESTAMPTZ      NOT NULL DEFAULT NOW(),
    updated_at      TIMESTAMPTZ,

    CONSTRAINT pk_campaign_records PRIMARY KEY (campaign_id)
);

-- Index for most-recent campaigns query
CREATE INDEX idx_campaign_records_created_at
    ON tbl_campaign_records (created_at DESC);

-- Index for PES dashboard queries (filter by score tier)
CREATE INDEX idx_campaign_records_pes_score
    ON tbl_campaign_records (pes_score)
    WHERE pes_score IS NOT NULL;

COMMENT ON TABLE  tbl_campaign_records IS 'Module 4 — raw campaign ingestion records with computed KPIs and PES scores (FR4.26)';
COMMENT ON COLUMN tbl_campaign_records.pes_score IS 'Promotional Effectiveness Score (0.0–1.0) computed by FastAPI pes-compute/analyze or Spring Boot fallback';
COMMENT ON COLUMN tbl_campaign_records.pes_label IS 'Qualitative PES label: Poor | Fair | Good | Excellent Performance';
